# nixplates

./: .envrc  .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
templates/go/: .gitignore  .goreleaser.publish.yml  .goreleaser.release.yml  Dockerfile  README.md  flake.nix  go.mod
templates/go/.github/workflows/: publish.yml  release.yml  test.yml
templates/go/cmd/example-go/: main.go
templates/go/internal/app/: app.go  app_test.go
templates/go/tests/: smoke_test.go
templates/nextjs/: .env.example  .gitignore  Dockerfile  README.md  biome.json  drizzle.config.ts  flake.nix  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
templates/nextjs/.github/workflows/: test.yml
templates/nextjs/src/app/: globals.css  layout.tsx  page.tsx
templates/nextjs/src/app/api/health/: route.ts
templates/nextjs/src/components/: template-hero.tsx
templates/nextjs/src/components/ui/: button.tsx
templates/nextjs/src/db/: client.ts  schema.ts
templates/nextjs/src/lib/: health.ts
templates/nextjs/tests/: health.test.ts  home.spec.ts  template-hero.test.tsx
templates/python/: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
templates/python/.github/workflows/: publish.yml  release.yml  test.yml
templates/python/src/example_pkg/: __init__.py  __main__.py
templates/python/tests/: test_main.py
